# ai4code

./: .gitignore  .gitmodules  README.md  config.py  data.py  dataset.py  main.py  metric.py  model.py  pip-list.txt  prepare_data.py  preprocess.py  pyproject.toml  requirements.txt  study.ipynb  submission.ipynb  sweep.yaml  test.py  train.py  utils.py
code/: config.py  dataset.py  ensemble.py  metric.py  model.py  preprocess.py  preprocess_custom.py  preprocess_with_custom.py  save_base_model.py  submission_220711-0308.csv  sweep.yaml  test.py  train.py  train_utils.py  trainer.py  view.ipynb
working/wandb/: latest-run
working/wandb/run-20220708_143054-33an90ty/files/: config.yaml  diff.patch  requirements.txt  wandb-metadata.json
working/wandb/run-20220708_143054-33an90ty/files/code/code/: train.py
