[tool.poetry]
name = "ai4code"
version = "0.1.0"
description = ""
authors = ["Lee Joonhun <jhlee63@outlook.com>"]

[tool.poetry.dependencies]
python = "==3.7.12"
black = "^22.3.0"
jupyter = "^1.0.0"
notebook = "^6.4.12"
plotly = "^5.8.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
