[tool.poetry]
name = "ai4code"
version = "0.1.0"
description = ""
authors = ["Lee Joonhun <jhlee63@outlook.com>"]

[tool.poetry.dependencies]
python = "==3.7.12"
black = "^22.3.0"
numpy = "1.21.6"
scipy = "1.7.3"
scikit-learn = "1.0.2"
pandas = "1.3.5"
jupyter = "^1.0.0"
notebook = "^6.4.12"
plotly = "^5.8.2"
seaborn = "0.11.2"
kaggle = "1.5.12"
kaggle-environments = "1.9.10"
torch = {version = "^1.11.0", platform = "linux"}
transformers = "^4.19.4"
wandb = "^0.12.18"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
