[tool.poetry]
name = "ai4code"
version = "0.1.0"
description = ""
authors = ["Lee Joonhun <jhlee63@outlook.com>"]

[tool.poetry.dependencies]
python = "3.7.12"
black = "^22.3.0"
jupyter = "1.0.0"
kaggle = "1.5.12"
kaggle-environments = "1.9.10"
notebook = "6.4.11"
numpy = "1.21.6"
pandas = "1.3.5"
protobuf = "3.20.1"
scikit-learn = "1.0.2"
scipy = "1.7.3"
seaborn = "0.11.2"
torch = { version = "1.11.0", platform = "linux" }
wandb = "0.12.16"
transformers = {path = "transformers"}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
